US-0000164: Order Details Update

--- a/lwc/trac_OrderLoyalty/trac_OrderLoyalty.html
+++ b/lwc/trac_OrderLoyalty/trac_OrderLoyalty.html
@@ -12,8 +12,8 @@
                     <lightning-layout>
                         <lightning-layout-item padding="around-small">
                             <div class="header-column">
-                                <p class="field-title slds-form-element__label slds-no-flex">Total Points Earned</p>
-                                <p>{order.Extn.ExtnPointsEarned}</p>
+                                <p class="field-title slds-form-element__label slds-no-flex">{displayTotalPointsLabel}</p>
+                                <p>{displayTotalPointsValue}</p>
                             </div>
                         </lightning-layout-item>
                     </lightning-layout>
@@ -28,58 +28,121 @@
         </lightning-layout-item>
     </lightning-layout>
 
-    <template for:each={order.Shipments.Shipment} for:item="shipment">
+    <template for:each={shipments} for:item="shipment">
         <div key={shipment.ShipmentNo}>
             <div class="slds-p-around_xxx-small">
                 <div class="slds-text-title slds-p-around_xxx-small">
-                    <h3> > Shipment {shipment.ShipmentNo}</h3>
+                    <h3> > Shipment</h3>
 
                     <div class="slds-box_border slds-p-around_small slds-theme--shade">
                         <lightning-layout multiple-rows="true">
                             <lightning-layout-item size="12">
                                 <lightning-layout>
                                     <lightning-layout-item padding="around-small">
-                                    <div class="header-column">
-                                        <p class="field-title slds-form-element__label slds-no-flex">Ship Node</p>
-                                        <p>{shipment.ShipNode.ShipNode}</p>
-                                    </div>
-                                </lightning-layout-item>
+                                        <div class="header-column">
+                                            <p class="field-title slds-form-element__label slds-no-flex">Ship Node</p>
+                                            <p>{shipment.ShipNode}</p>
+                                        </div>
+                                    </lightning-layout-item>
+
+                                    <lightning-layout-item padding="around-small">
+                                        <div class="header-column">
+                                            <p class="field-title slds-form-element__label slds-no-flex">Shipment No</p>
+                                            <p>{shipment.ShipmentNo}</p>
+                                        </div>
+                                    </lightning-layout-item>
+
+                                    <lightning-layout-item padding="around-small">
+                                        <div class="header-column">
+                                            <p class="field-title slds-form-element__label slds-no-flex">Invoice No</p>
+                                            <p>{shipment.InvoiceNo}</p>
+                                        </div>
+                                    </lightning-layout-item>
 
                                     <lightning-layout-item padding="around-small">
                                         <div class="header-column">
                                             <p class="field-title slds-form-element__label slds-no-flex">Loyalty No</p>
-                                            <p>{shipment.Extn.ExtnLoyaltyNo}</p>
+                                            <p>{shipment.ExtnLoyaltyNo}</p>
                                         </div>
                                     </lightning-layout-item>
 
                                     <lightning-layout-item padding="around-small">
                                         <div class="header-column">
                                             <p class="field-title slds-form-element__label slds-no-flex">Loyalty Tier</p>
-                                            <p>{shipment.Extn.ExtnLoyaltyTier}</p>
+                                            <p>{shipment.ExtnLoyaltyTier}</p>
                                         </div>
                                     </lightning-layout-item>
 
-                                    <lightning-layout-item padding="around-small">
-                                        <div class="header-column">
-                                            <p class="field-title slds-form-element__label slds-no-flex">Item Description</p>
-                                            <p>Satin Ballerina Slippers</p>
-                                        </div>
-                                    </lightning-layout-item>
+<!--                                    <lightning-layout-item padding="around-small">-->
+<!--                                        <div class="header-column">-->
+<!--                                            <p class="field-title slds-form-element__label slds-no-flex">Item Description</p>-->
+<!--                                            <p>Satin Ballerina Slippers</p>-->
+<!--                                        </div>-->
+<!--                                    </lightning-layout-item>-->
 
-                                    <lightning-layout-item padding="around-small">
-                                        <div class="header-column">
-                                            <p class="field-title slds-form-element__label slds-no-flex">Status</p>
-                                            <p>Shipped</p>
-                                        </div>
-                                    </lightning-layout-item>
+<!--                                    <lightning-layout-item padding="around-small">-->
+<!--                                        <div class="header-column">-->
+<!--                                            <p class="field-title slds-form-element__label slds-no-flex">Status</p>-->
+<!--                                            <p>Shipped</p>-->
+<!--                                        </div>-->
+<!--                                    </lightning-layout-item>-->
 
                                     <lightning-layout-item padding="around-small">
                                         <div class="header-column">
                                             <p class="field-title slds-form-element__label slds-no-flex">Points Earned</p>
-                                            <p>{shipment.Extn.ExtnPointsEarned}</p>
+                                            <p>{shipment.ExtnPointsEarned}</p>
                                         </div>
                                     </lightning-layout-item>
                                 </lightning-layout>
+
+                                <!-- iterate over shipment line items -->
+                                <div class="slds-text-title slds-p-around_small">
+                                    <h3> > Shipment Lines</h3>
+                                    <template for:each={shipment.ShipmentLines} for:item="shipmentLine">
+                                        <div key={shipmentLine.Idx} class="slds-box_border slds-theme--default">
+                                            <lightning-layout multiple-rows="true">
+                                                <lightning-layout-item size="12">
+                                                    <lightning-layout>
+                                                        <lightning-layout-item padding="around-small">
+                                                            <div class="header-column">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">SKN #</p>
+                                                                <p>{shipmentLine.ItemID}</p>
+                                                            </div>
+                                                        </lightning-layout-item>
+
+                                                        <lightning-layout-item padding="around-small">
+                                                            <div class="header-column">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">Item Description</p>
+                                                                <p>{shipmentLine.ShortDescription}</p>
+                                                            </div>
+                                                        </lightning-layout-item>
+
+                                                        <lightning-layout-item padding="around-small">
+                                                            <div class="header-column">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">Unit Price</p>
+                                                                <p>{shipmentLine.UnitPrice}</p>
+                                                            </div>
+                                                        </lightning-layout-item>
+
+                                                        <lightning-layout-item padding="around-small">
+                                                            <div class="header-column">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">Quantity</p>
+                                                                <p>{shipmentLine.Quantity}</p>
+                                                            </div>
+                                                        </lightning-layout-item>
+
+                                                        <lightning-layout-item padding="around-small">
+                                                            <div class="header-column">
+                                                                <p class="field-title slds-form-element__label slds-no-flex">Status</p>
+                                                                <p>{shipmentLine.Status}</p>
+                                                            </div>
+                                                        </lightning-layout-item>
+                                                    </lightning-layout>
+                                                </lightning-layout-item>
+                                            </lightning-layout>
+                                        </div>
+                                    </template>
+                                </div>
                             </lightning-layout-item>
                         </lightning-layout>
                     </div>
